@@ -68,7 +68,7 @@ data:extend({
         type = "double-setting",
         name = "hextorio-base-trade-prod-nauvis",
         setting_type = "runtime-global",
-        default_value = -0.2,
+        default_value = 0,
         minimum_value = -10,
         maximum_value = 10,
         order = "m[trades]-p[nauvis]-t[base-prod]",
@@ -77,7 +77,7 @@ data:extend({
         type = "double-setting",
         name = "hextorio-base-trade-prod-vulcanus",
         setting_type = "runtime-global",
-        default_value = -0.1,
+        default_value = 0.05,
         minimum_value = -10,
         maximum_value = 10,
         order = "m[trades]-p[nauvis]-t[base-prod]",
@@ -86,7 +86,7 @@ data:extend({
         type = "double-setting",
         name = "hextorio-base-trade-prod-fulgora",
         setting_type = "runtime-global",
-        default_value = 0,
+        default_value = 0.10,
         minimum_value = -10,
         maximum_value = 10,
         order = "m[trades]-p[nauvis]-t[base-prod]",
@@ -95,7 +95,7 @@ data:extend({
         type = "double-setting",
         name = "hextorio-base-trade-prod-gleba",
         setting_type = "runtime-global",
-        default_value = 0.1,
+        default_value = 0.15,
         minimum_value = -10,
         maximum_value = 10,
         order = "m[trades]-p[nauvis]-t[base-prod]",
@@ -104,7 +104,7 @@ data:extend({
         type = "double-setting",
         name = "hextorio-base-trade-prod-aquilo",
         setting_type = "runtime-global",
-        default_value = 0.2,
+        default_value = 0.20,
         minimum_value = -10,
         maximum_value = 10,
         order = "m[trades]-p[nauvis]-t[base-prod]",
